--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/vite.config.ts", "use": "@vercel/static-build" },
-    { "src": "api/index.ts", "use": "@vercel/node" }
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/vite.config.ts",
+      "use": "@vercel/static-build"
+    }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.ts" },
