--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
+      "src": "frontend/vite.config.ts",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "frontend/dist"
+      }
     },
     {
-      "src": "frontend/vite.config.ts",
-      "use": "@vercel/static-build"
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
