--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
     {
       "src": "frontend/vite.config.ts",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist"
-      }
+      "config": { "distDir": "frontend/dist" }
     },
     {
       "src": "api/**/*.ts",
