--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "sync:types": "node scripts/sync-types.js",
     "build:frontend": "npm run sync:types && npm run build --workspace frontend",
     "build:api": "npm run sync:types && npm run build --workspace api",
-    "dev": "npm run sync:types && npm run dev --workspaces",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run sync:types && npm run dev --workspace frontend",
+    "dev:api": "npm run sync:types && npm run dev --workspace api"
   },
   "keywords": [],
   "author": "",
