--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cloudinary": "^1.41.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
