--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "@types/bcryptjs": "^2.4.2"
   }
 }
