--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "mongoose": "^8.7.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "google-one-tap": "^1.0.6",
+    "apple-sign-in-js": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
