--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.7.0",
     "serverless-http": "^3.2.0",
-    "google-one-tap": "^1.0.6"
+    "google-one-tap": "^1.0.6",
+    "react-apple-login": "^0.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
