--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.16",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "google-one-tap": "^1.0.6",
+    "react-apple-login": "^0.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
