--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "google-auth-library": "^10.5.0",
     "google-one-tap": "^1.0.6",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "serverless-http": "^3.2.0"
   },
@@ -20,6 +21,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.19",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
