--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,13 @@
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "google-one-tap": "^1.0.6",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.16",
-    "jwt-decode": "^3.1.2",
-    "google-one-tap": "^1.0.6"
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -32,7 +32,8 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@7.1.14",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
