--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@yudiel/react-qr-scanner": "^2.4.1",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "google-one-tap": "^1.0.6",
