--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -12,6 +12,6 @@
     "typeRoots": ["../node_modules/@types", "./node_modules/@types"],
     "baseUrl": "."
   },
-  "include": ["**/*.ts"],
+  "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
