--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
-    "html-to-image": "^1.11.11",
     "@yudiel/react-qr-scanner": "^2.4.1",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "google-one-tap": "^1.0.6",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^3.0.3",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
